--- a/DiplomaBack/DiplomaBack.csproj
+++ b/DiplomaBack/DiplomaBack.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.3.0" />
   </ItemGroup>
@@ -19,10 +20,6 @@
   <ItemGroup>
     <ProjectReference Include="..\DiplomaBack.BLL\DiplomaBack.BLL.csproj" />
     <ProjectReference Include="..\DiplomaBack.DAL\DiplomaBack.DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
