--- a/DiplomaBack/Properties/launchSettings.json
+++ b/DiplomaBack/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/cities",
+      "launchUrl": "api/restaurants",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
