--- a/DiplomaBack.DAL/DiplomaBack.DAL.csproj
+++ b/DiplomaBack.DAL/DiplomaBack.DAL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.3.0" />
   </ItemGroup>
 
