--- a/DiplomaBack.DAL/DiplomaBack.DAL.csproj
+++ b/DiplomaBack.DAL/DiplomaBack.DAL.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dijkstra.NET" Version="1.0.8" />
+    <PackageReference Include="GoogleMapsAPI.NET" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
