Add logic with calculating shorter route

--- a/DiplomaBack.DAL/DiplomaBack.DAL.csproj
+++ b/DiplomaBack.DAL/DiplomaBack.DAL.csproj
@@ -7,10 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Dijkstra.NET" Version="1.0.8" />
     <PackageReference Include="GoogleMapsAPI.NET" Version="1.0.0" />
+    <PackageReference Include="HamiltonianGraph" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
+    <PackageReference Include="TSPLib.Net" Version="1.1.5" />
   </ItemGroup>
 
   <ItemGroup>
