--- a/DiplomaBack.DAL/DiplomaBack.DAL.csproj
+++ b/DiplomaBack.DAL/DiplomaBack.DAL.csproj
@@ -5,14 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dijkstra.NET" Version="1.0.8" />
-    <PackageReference Include="GoogleMapsAPI.NET" Version="1.0.0" />
-    <PackageReference Include="HamiltonianGraph" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
-    <PackageReference Include="TSPLib.Net" Version="1.1.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +24,10 @@
     <Reference Include="Microsoft.Extensions.Identity.Stores">
       <HintPath>..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.0.2\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
