--- a/DiplomaBack/DiplomaBack.csproj
+++ b/DiplomaBack/DiplomaBack.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+    <PackageReference Include="FluentValidation" Version="7.5.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
@@ -19,10 +21,6 @@
   <ItemGroup>
     <ProjectReference Include="..\DiplomaBack.BLL\DiplomaBack.BLL.csproj" />
     <ProjectReference Include="..\DiplomaBack.DAL\DiplomaBack.DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
