--- a/DiplomaBack/appsettings.json
+++ b/DiplomaBack/appsettings.json
@@ -10,6 +10,10 @@
       "LogLevel": {
         "Default": "Warning"
       }
+    },
+    "JwtIssuerOptions": {
+      "Issuer": "webApi",
+      "Audience": "http://localhost:60326/"
     }
   }
 }
